# LayoutScribe

./: .cursorrules  .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API_SPEC.md  ARCHITECTURE.md  BENCHMARKS.md  CLI_SPEC.md  CONFIGURATION.md  DEVELOPMENT_PLAN.md  PROMPTS_AND_SCHEMA.md  PROVIDERS.md  ROADMAP.md  SECURITY.md  TESTING_STRATEGY.md
docs/schema/: layout_page.schema.json
notebooks/: Quickstart.ipynb
src/layoutscribe/: __init__.py  api.py  cli.py  config.py  exceptions.py  types.py
src/layoutscribe/agents/: __init__.py  composer.py  graph.py  page_vision.py  planner.py  reviewer.py
src/layoutscribe/layout/: __init__.py  compose.py  validate.py
src/layoutscribe/llm/: __init__.py  prompts.py  router.py
src/layoutscribe/loaders/: __init__.py  docx.py  pptx.py
src/layoutscribe/schema/: __init__.py
src/layoutscribe/tracing/: __init__.py  mlflow_logger.py
src/layoutscribe/utils/: __init__.py  backoff.py  cost.py  images.py  io.py  overlays.py
tests/: test_schema.py
